--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "homepage": "https://moneytracker.github.io/nome-do-projeto"
+    "homepage": "https://2ramon2.github.io/moneytracker"
   },
   "dependencies": {
     "polished": "^4.2.2",
